@@ -3,7 +3,6 @@ package org.uniprot.api.common.repository.solrstream;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.Mockito.mock;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.apache.http.client.HttpClient;
@@ -12,6 +11,8 @@ import org.apache.solr.client.solrj.io.stream.TupleStream;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.uniprot.api.common.repository.search.SolrFacetRequest;
+import org.uniprot.api.common.repository.search.SolrRequest;
 import org.uniprot.api.common.repository.search.facet.FacetConfig;
 import org.uniprot.api.common.repository.search.facet.FakeFacetConfig;
 import org.uniprot.store.search.SolrCollection;
@@ -37,17 +38,18 @@ class FacetTupleStreamTemplateTest {
 
     @Test
     void testCreateTupleStream() {
-        SolrStreamFacetRequest.SolrStreamFacetRequestBuilder builder =
-                SolrStreamFacetRequest.builder();
-        String query = "accession_id:(P12345 OR Q12345)";
-        String facet1 = "reviewed";
-        String facet2 = "annotation";
-        String facet3 = "fragment";
-        List<String> facets = Arrays.asList(facet1, facet2, facet3);
-        SolrStreamFacetRequest request = builder.query(query).facets(facets).build();
+        SolrRequest.SolrRequestBuilder builder = SolrRequest.builder();
+        String idsQuery = "accession_id:(P12345 OR Q12345)";
+        SolrFacetRequest facet1 = SolrFacetRequest.builder().name("reviewed").build();
+        SolrFacetRequest facet2 = SolrFacetRequest.builder().name("annotation").build();
+        SolrFacetRequest facet3 = SolrFacetRequest.builder().name("fragment").build();
+        String queryField = "id";
+        List<SolrFacetRequest> facets = List.of(facet1, facet2, facet3);
+        SolrRequest request =
+                builder.idsQuery(idsQuery).queryField(queryField).facets(facets).build();
         FacetConfig facetConfig = new FakeFacetConfig();
         facetConfig.setLimit(5);
-        TupleStream tupleStream = tupleStreamTemplate.create(request, facetConfig);
+        TupleStream tupleStream = tupleStreamTemplate.create(request);
         assertThat(tupleStream, Matchers.is(Matchers.notNullValue()));
         assertThat(tupleStream.children(), Matchers.is(Matchers.iterableWithSize(3)));
         tupleStream
